--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   font-family: sans-serif;
   font-weight: bold;
@@ -15,6 +16,8 @@ h1 {
 
 .row {
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .box {
@@ -23,10 +26,10 @@ h1 {
 
   text-align: center;
 
-  height: 160px;
+  height: 190px;
   margin-right: 15px;
   margin-left: 15px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 
   padding-top: 10px;
 }
@@ -71,6 +74,7 @@ h2 {
   .col-lg-11,
   .col-lg-12 {
     float: left;
+    position: relative;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -126,6 +130,7 @@ h2 {
   .col-md-11,
   .col-md-12 {
     float: left;
+    position: relative;
   }
   .col-md-1 {
     width: 8.33%;
@@ -161,6 +166,61 @@ h2 {
     width: 91.66%;
   }
   .col-md-12 {
+    width: 100%;
+  }
+}
+
+/** minimum devices only **/
+@media (max-width: 767px) {
+  .col-sm-1,
+  .col-sm-2,
+  .col-sm-3,
+  .col-sm-4,
+  .col-sm-5,
+  .col-sm-6,
+  .col-sm-7,
+  .col-sm-8,
+  .col-sm-9,
+  .col-sm-10,
+  .col-sm-11,
+  .col-sm-12 {
+    float: left;
+    position: relative;
+  }
+  .col-sm-1 {
+    width: 8.33%;
+  }
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-5 {
+    width: 41.66%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33%;
+  }
+  .col-sm-8 {
+    width: 66.66%;
+  }
+  .col-sm-9 {
+    width: 74.99%;
+  }
+  .col-sm-10 {
+    width: 83.33%;
+  }
+  .col-sm-11 {
+    width: 91.66%;
+  }
+  .col-sm-12 {
     width: 100%;
   }
 }
