--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ h1 {
   height: 190px;
   margin-right: 15px;
   margin-left: 15px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 
   padding-top: 10px;
 }
@@ -44,6 +44,11 @@ h2 {
   color: black;
   font-size: 20px;
   margin: -11px -1px 10px auto;
+}
+
+p {
+  margin-right: 16px;
+  margin-left: 16px;
 }
 
 #t1 {
